--- a/v1/production/files/references/AcercaDeApp.html
+++ b/v1/production/files/references/AcercaDeApp.html
@@ -206,7 +206,7 @@
         style='font-size:16px;line-height:115%;font-family:\"Ancizar Sans\",sans-serif;'><em>Facultad de
             Enfermer&iacute;a</em></span></p>
 <p style='margin:0cm;line-height:115%;font-size:15px;font-family:\"Arial\",sans-serif;'><span
-        style='font-size:16px;line-height:115%;font-family:\"Ancizar Sans\",sans-serif;'><em>&nbsp;Universidad Nacional de
+        style='font-size:16px;line-height:115%;font-family:\"Ancizar Sans\",sans-serif;'><em>Universidad Nacional de
             Colombia.</em></span></p>
 <p style='margin:0cm;line-height:115%;font-size:15px;font-family:\"Arial\",sans-serif;'><span
         style='font-size:16px;line-height:115%;font-family:\"Ancizar Sans\",sans-serif;'>&nbsp;</span></p>
