add link to page

--- a/v1/develop/files/references/AcercaDeApp.html
+++ b/v1/develop/files/references/AcercaDeApp.html
@@ -76,6 +76,14 @@
                 style='font-size:15px;font-family:"Ancizar Sans",sans-serif;color:black;'>n tipo.</span></p>
 <p
         style='margin-right:0cm;margin-left:0cm;font-size:15px;font-family:"Arial",sans-serif;margin:0cm;line-height:12.95pt;text-align:justify;'>
+        <span style='font-size:15px;font-family:"Ancizar Sans",sans-serif;color:black;'>&nbsp;</span></p>
+<p
+        style='margin-right:0cm;margin-left:0cm;font-size:15px;font-family:"Arial",sans-serif;margin:0cm;line-height:12.95pt;text-align:justify;'>
+        <span style='font-size:15px;font-family:"Ancizar Sans",sans-serif;color:black;'>Para m&aacute;s
+                informaci&oacute;n visite nuestra <a href="https://prevemergencias.github.io/privacy/">p&aacute;gina de
+                        pol&iacute;ticas de privacidad</a>.</span></p>
+<p
+        style='margin-right:0cm;margin-left:0cm;font-size:15px;font-family:"Arial",sans-serif;margin:0cm;line-height:12.95pt;text-align:justify;'>
         <span style='font-size:15px;font-family:"Calibri",sans-serif;color:black;'>&nbsp;</span></p>
 <p
         style='margin-right:0cm;margin-left:0cm;font-size:15px;font-family:"Arial",sans-serif;margin:0cm;line-height:12.95pt;text-align:justify;'>
